<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/options_menu_bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/component_color_shared_content_container_background_color"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
      android:id="@+id/action_options"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawablePadding="8dp"
      app:drawableTint="@color/component_color_shared_multipane_icon_color"
      android:gravity="center_vertical"
      android:minHeight="48dp"
      android:text="@string/menu_options"
      android:textColor="@color/component_color_shared_primary_dark_text_color"
      android:textSize="20sp"
      app:drawableStartCompat="@drawable/ic_options_icon_grey_24dp" />

    <TextView
      android:id="@+id/action_help"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawablePadding="8dp"
      app:drawableTint="@color/component_color_shared_multipane_icon_color"
      android:gravity="center_vertical"
      android:minHeight="48dp"
      android:text="@string/menu_help"
      android:textColor="@color/component_color_shared_primary_dark_text_color"
      android:textSize="20sp"
      app:drawableStartCompat="@drawable/ic_baseline_help_outline_24" />

    <TextView
      android:id="@+id/action_close"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawablePadding="8dp"
      app:drawableTint="@color/component_color_shared_multipane_icon_color"
      android:gravity="center_vertical"
      android:minHeight="48dp"
      android:text="@string/bottom_sheet_options_menu_close"
      android:textColor="@color/component_color_shared_primary_dark_text_color"
      android:textSize="20sp"
      app:drawableStartCompat="@drawable/ic_baseline_close_24" />
  </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
