<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <ImageButton
    android:id="@+id/action_bottom_sheet_options_menu"
    style="?android:actionOverflowButtonStyle"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:minWidth="48dp"
    android:minHeight="48dp"
    android:scaleType="center" />

</androidx.constraintlayout.widget.ConstraintLayout>